Fix minor dark mode bugs

--- a/src/ChromaListe.Web/input/assets/css/_site.scss
+++ b/src/ChromaListe.Web/input/assets/css/_site.scss
@@ -50,7 +50,7 @@ $icon-size: 67px;
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    background: #fff;
+    background: #333;
     border: 2px solid #666;
     text-align: center;
     position: absolute;
@@ -65,7 +65,7 @@ $icon-size: 67px;
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    background: #fff;
+    background: #333;
     border: 2px solid #666;
     text-align: center;
     position: absolute;
